# CoBreeder_for_GhostWolves

./: .gitignore  README-GUI.md  README-v1.md  README-v1_CLI.md  README-v2.md  README-v2_GUI.md  README.md  best_allocation_ghost_experiment.csv  best_allocation_ghost_test.csv  best_solution_ghost_experiment.csv  pyproject.toml
cobreeder_for_ghost_wolves/: ghost-cobreeder-GUI.py  ghost-cobreeder-gui.py  ghost-cobreeder-v1.py  ghost-cobreeder-v1_CLI.py  ghost-cobreeder-v2-GUI-adjusted.py  ghost-cobreeder-v2.py  ghost-cobreeder-v2_CLI.py  ghost-cobreeder-v2_GUI.py  ghost-cobreeder-v2_for_GUI.py  ghost_cobreeder_v2_CLI..py  ghost_cobreeder_v2_CLI.py  ghost_cobreeder_v2_GUI.py  ghost_cobreeder_v2_for_GUI.py
cobreeder_for_ghost_wolves/results/: best_solution_experiment-name.csv  best_solution_ghost-wolf-experiment-1.csv
data/dissertation_4.4/: pr-scaled.csv  setup.txt
data/dissertation_5.1/: individuals.csv  pr-scaled.csv
data/manually_adjusted_original_data/: individuals.csv
data/original_data/: corrals-a-flex.csv  pr-scaled.csv
data/randomly_generated_data/: generated-groups.csv  generated-individuals.csv  generated-pr-scaled.csv
ghost_wolf_cobreeder/: cobreeder-solver.py  cobreeder-solver2.py  ghost-cobreeder-solver.py  ghost-cobreeder-v1.py
results/: 5-1_averages.csv  5-1_individual_runs.csv  5-2_spread_averages.csv  best_solution_ghost_experiment.csv
supporting_scripts/: data-generation-v2.py  graph_generation.py  spread_data_gen.py
tests/: data-generation-v2.py  data-generation.py  tests.py
v1_archive/: data-generation-v1.py
(+184 files in other folders)
