[tool.poetry]
name = "cobreeder-for-ghostwolves"
version = "0.1.0"
description = ""
authors = ["Saxen Payne <payne.saxen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
ortools = "^9.11.4210"
asv = "^0.6.4"
numpy = "~=2.2.4"
pandas = "~=2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
