[tool.poetry]
name = "cobreeder-for-ghostwolves"
version = "0.2.0"
description = ""
authors = ["Saxen Payne <payne.saxen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
ortools = "^9.11.4210"
asv = "^0.6.4"
pandas = "^2.2.3"
numpy = "^2.2.5"
markdown = "^3.8"
pandastable = "^0.14.0"
tkinterweb = "^4.3.1"
absl-py = "^2.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
